--- a/doodles/people.html
+++ b/doodles/people.html
@@ -35,6 +35,7 @@
         <div class="main">
         <img src="/website/doodles/peopleheader.gif" alt="people" style="height:120px; margin-bottom:20px" class="header">
         <div id="drawings" style="width:650px; margin-top:20px">
+        <img src="/website/doodles/people/tall.jpg" alt="tall">
         <img src="/website/doodles/people/annoyed.jpg" alt="annoyed">
         <img src="/website/doodles/people/guy.jpg" alt="guy">
         <img src="/website/doodles/people/aslep.jpg" alt="aslep">
@@ -49,6 +50,5 @@
         <img src="/website/doodles/people/untitled.png" alt="untitled">
         <img src="/website/doodles/people/float.jpg" alt="float">
         <img src="/website/doodles/people/fear.jpg" alt="fear">
-        <img src="/website/doodles/people/tall.jpg" alt="tallr">
         </div>
     </body>
