--- a/ap.html
+++ b/ap.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>another place #0</title>
         <link href="/website/styles/anotherstyle.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400&display=swap');
+        <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
         </style> 
     </head>
         <body>
