--- a/ap.html
+++ b/ap.html
@@ -8,4 +8,4 @@
         </style> 
     </head>
         <body>
-        <h1 style="-webkit-text-outline: 2px #f0f0f0; color: #00000000">another<br>place</h1></body>
+        <h1 style="-webkit-text-stroke: 2px #f0f0f0; color: #00000000">another<br>place</h1></body>
