--- a/ap.html
+++ b/ap.html
@@ -5,9 +5,10 @@
         <title>another place #0</title>
         <link href="/website/styles/anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
+        p{margin: 20px 0px;}
         </style> 
     </head>
         <body>
-        <h1 style="-webkit-text-stroke: 2px #f0f0f0; color: #00000000">another<br>place</h1>
+        <h1>another<br>place</h1>
         <p style="color: #808080">number zero</p>
     </body>
