--- a/about.html
+++ b/about.html
@@ -43,8 +43,7 @@
     researching a bunch about something for no reason, and probably a bunch more things i've probably forgotten.
     I've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
     (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
-    Regarding gender, i'm kinda confused. I just... don't feel like i'm a guy for some reason. Gender's just... weird.<br>
-    So i suppose i'm non-biney! Use they/them just to be sure but he/him works as a leftover ig<br>
+    Regarding gender, i'm kinda confused. I'm non-biney i suppose. Use they/them just to be sure but he/him works as a leftover ig<br>
     And i'm pretty sure i have OCD. And maybe other things too, but don't worry about it.<br>
     For contact: discord (@cvni81#4837) or email (cvni1981@gmail.com)</p>
     </div></body>
