--- a/ap.html
+++ b/ap.html
@@ -11,4 +11,6 @@
         <body>
         <h1>another<br>place</h1>
         <p style="color: #808080">number zero</p>
+        <div style="border: solid #f0f0f0 5px; margin-bottom: -20vh; margin-top: 20vh"></div>
+        <div style="width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%"></div>
     </body>
