--- a/ap.html
+++ b/ap.html
@@ -6,11 +6,13 @@
         <link href="/website/styles/anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
         p{margin: 20px 0px;}
+        .enter{width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
+        .enter:hover{background-color: #808080}
         </style> 
     </head>
         <body>
         <h1>another<br>place</h1>
         <p style="color: #808080">number zero</p>
         <div style="border: solid #f0f0f0 5px; margin-bottom: -20vh; margin-top: 20vh"></div>
-        <div style="width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%"></div>
+        <a><div class="enter"></div></a>
     </body>
