--- a/ap/0.html
+++ b/ap/0.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>another place #0</title>
-        <link href="/website/styles/anotherstyle.css" rel="stylesheet" type="text/css" media="all">
+        <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
         p{margin: 20px 0px;}
         .enter{width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
