--- a/ap/1.html
+++ b/ap/1.html
@@ -5,14 +5,20 @@
         <title>another place #0</title>
         <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
+        body{display: grid; 
+        grid-template-columns: 50% 50%;
+        row-gap: 20px;}
         p{margin: 20px 0px; color: #a0a0a0}
         .enter{width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
         .enter:hover{background-color: #808080}
         </style> 
     </head>
         <body>
-        <h1>another<br>place</h1>
-        <p>number zero</p>
-        <div style="border: solid #f0f0f0 5px; margin-bottom: -20vh; margin-top: 20vh"></div>
-        <a href="1"><div class="enter"></div></a>
+        <div>
+            <p style="vertical-align: middle; text-align: center;">a zine by cvni81</p>
+        </div>
+        <div>
+            <h2>index</h2>
+            <p>intro</p>
+        </div>
     </body>
