--- a/ap/1.html
+++ b/ap/1.html
@@ -14,10 +14,10 @@
         </style> 
     </head>
         <body>
-        <div>
-            <p style="vertical-align: middle; text-align: center;">a zine by cvni81</p>
+        <div style="display:flex">
+            <p style="align-self: center; text-align: center;">a zine by cvni81</p>
         </div>
-        <div>
+        <div style="padding-left:100px">
             <h2>index</h2>
             <p>intro</p>
         </div>
