--- a/ap/1.html
+++ b/ap/1.html
@@ -15,7 +15,7 @@
     </head>
         <body>
         <div style="display:flex">
-            <p style="align-self: center; text-align: center;">a zine by cvni81</p>
+            <p style="align-self: center; text-align: center; width: 100%">a zine by cvni81</p>
         </div>
         <div style="padding-left:100px">
             <h2>index</h2>
