--- a/ap/1.html
+++ b/ap/1.html
@@ -7,7 +7,10 @@
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
         body{display: grid; 
         grid-template-columns: 50% 50%;
-        row-gap: 20px;}
+        row-gap: 20px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%)}
         p{margin: 20px 0px; color: #a0a0a0}
         .enter{width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
         .enter:hover{background-color: #808080}
