--- a/ap/0.html
+++ b/ap/0.html
@@ -10,7 +10,7 @@
         .enter:hover{background-color: #808080}
         </style> 
     </head>
-        <body>
+        <body style="margin: 20px">
         <h1>another<br>place</h1>
         <p>number zero</p>
         <div style="border: solid #f0f0f0 5px; margin-bottom: -20vh; margin-top: 20vh"></div>
