--- a/ap/1.html
+++ b/ap/1.html
@@ -10,7 +10,8 @@
         row-gap: 20px;
         position: absolute;
         top: 50%;
-        transform: translateY(-50%)}
+        transform: translateY(-50%);
+        width: 100vw}
         p{margin: 20px 0px; color: #a0a0a0}
         .enter{width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
         .enter:hover{background-color: #808080}
