--- a/ap/2.html
+++ b/ap/2.html
@@ -18,11 +18,10 @@
         </style> 
     </head>
         <body>
-        <div style="display:flex">
-            <p style="align-self: center; text-align: center; width: 100%">a zine by cvni81</p>
+        <div style="padding:100px">
+            <p>this is a test</p>
         </div>
-        <div style="padding-left:100px">
-            <h2>index</h2>
-            <p><a href="2">intro</a></p>
+        <div style="padding:100px">
+            <p>this is a test</p>
         </div>
     </body>
