--- a/ap/2.html
+++ b/ap/2.html
@@ -19,7 +19,12 @@
     </head>
         <body>
         <div style="padding:100px">
-            <p>this is a test</p>
+            <p style="text-align:justify">hello! this is a project for a zine that i just... felt like making one day.
+                i originally intended it to be a pdf and to be printable into an actual zine,
+                but LibreOffice wasn't cutting it and, since i already am acquainted with css 
+                and html and because it's very flexible, i decided to make it into a webzine instead,
+                hosted on my own website.
+            </p>
         </div>
         <div style="padding:100px">
             <p>this is a test</p>
