--- a/ap/2.html
+++ b/ap/2.html
@@ -18,15 +18,19 @@
         </style> 
     </head>
         <body>
-        <div style="padding:100px">
-            <p style="text-align:justify">hello! this is a project for a zine that i just... felt like making one day.
-                i originally intended it to be a pdf and to be printable into an actual zine,
-                but LibreOffice wasn't cutting it and, since i already am acquainted with css 
-                and html and because it's very flexible, i decided to make it into a webzine instead,
+        <div style="padding: 0px 100px">
+            <p style="text-align:justify">Hello! This is a project for a zine that I just... felt like making one day.
+                I originally intended it to be a pdf and to be printable into an actual zine,
+                but LibreOffice wasn't cutting it and, since I already am acquainted with css 
+                and html and because it's very flexible, I decided to make it into a webzine instead,
                 hosted on my own website.
             </p>
         </div>
-        <div style="padding:100px">
-            <p>this is a test</p>
+        <div style="padding: 0px 100px">
+            <p>I don't know what to put here. I guess i'll just put things i feel like putting here.
+                Stories, some poems, maybe drawings... stuff in general.
+                Especially since I have a lot of free time now, and hopefully, with this other place,
+                somewhere to put this time to use.
+            </p>
         </div>
     </body>
