--- a/ap/1.html
+++ b/ap/1.html
@@ -17,7 +17,7 @@
         .enter:hover{background-color: #808080}
         </style> 
     </head>
-        <body>
+        <body style="font-size:xx-large">
         <div style="display:flex">
             <p style="align-self: center; text-align: center; width: 100%">a zine by cvni81</p>
         </div>
