--- a/ap/2.html
+++ b/ap/2.html
@@ -27,7 +27,7 @@
             </p>
         </div>
         <div style="padding: 0px 100px">
-            <p>I don't know what to put here. I guess i'll just put things i feel like putting here.
+            <p style="text-align:justify">I don't know what to put here. I guess i'll just put things i feel like putting here.
                 Stories, some poems, maybe drawings... stuff in general.
                 Especially since I have a lot of free time now, and hopefully, with this other place,
                 somewhere to put this time to use.
