--- a/ap/2.html
+++ b/ap/2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>another place #0</title>
+        <title>intro</title>
         <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
         body{display: grid; 
@@ -30,7 +30,7 @@
             <p style="text-align:justify">I don't know what to put here. I guess i'll just put things i feel like putting here.
                 Stories, some poems, maybe drawings... stuff in general.
                 Especially since I have a lot of free time now, and hopefully, with this other place,
-                somewhere to put this time to use.
+                somewhere to put this time to use. Not much else to say. Sorry.
             </p>
         </div>
     </body>
