--- a/ap/2.html
+++ b/ap/2.html
@@ -6,5 +6,5 @@
         <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
     </head>
         <body>
-            <a href="3"><img src="intro.png" alt="intro"></a>
+            <a href="3"><img src="intro.png" alt="intro" style="height:100vh; float: right"></a>
     </body>
