--- a/ap/3.html
+++ b/ap/3.html
@@ -28,7 +28,7 @@
         </div>
         <div style="padding: 0px 100px">
             <p style="text-align:justify">I don't know what to put here yet. I guess i'll just put things i feel like putting here.
-                Stories, some poems, maybe drawings... stuff in general.
+                Stories, some poems, maybe drawings... Maybe even in a bunch of languages... stuff in general.
                 Especially since I have a lot of free time now, and hopefully, with this other place,
                 somewhere to put this time to use. Not much else to say. Sorry.
             </p>
