--- a/tb/0.html
+++ b/tb/0.html
@@ -5,13 +5,14 @@
         <title>another place #0</title>
         <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
+        body{display: grid}
         p{margin: 20px 0px; color: #a0a0a0}
         .enter{width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
         .enter:hover{background-color: #808080}
         </style> 
     </head>
         <body style="margin: 20px; font-size: xx-large">
-        <h1>another<br>place</h1>
+        <h1>the<br>base-<br>ment</h1>
         <p>number zero</p>
         <div style="border: solid #f0f0f0 5px; margin-bottom: -20vh; margin-top: 20vh"></div>
         <a href="1"><div class="enter"></div></a>
