--- a/zine/0.html
+++ b/zine/0.html
@@ -10,10 +10,13 @@
         .enter{width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
         .enter:hover{background-color: #808080}
         </style> 
-    </head>
-        <body style="margin: 20px; font-size: xx-large">
+    </head><body style="margin: 20px; font-size: xx-large">
+    <div>
         <h1>the<br>base-<br>ment</h1>
         <p>number zero</p>
+    </div>
+    <div>
         <div style="border: solid #f0f0f0 5px; margin-bottom: -20vh; margin-top: 20vh"></div>
         <a href="1"><div class="enter"></div></a>
+    </div>
     </body>
