--- a/zine/0.html
+++ b/zine/0.html
@@ -5,7 +5,7 @@
         <title>another place #0</title>
         <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
-        body{display: grid}
+        body{display: grid; grid-template-columns: auto auto;}
         p{margin: 20px 0px; color: #a0a0a0}
         .enter{width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
         .enter:hover{background-color: #808080}
