--- a/zine/0.html
+++ b/zine/0.html
@@ -5,9 +5,9 @@
         <title>another place #0</title>
         <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
-        body{display: grid; grid-template-columns: auto auto;}
+        body{display: grid; grid-template-columns: min-content min-content;}
         p{margin: 20px 0px; color: #a0a0a0}
-        .enter{width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
+        .enter{width: 35vh;height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
         .enter:hover{background-color: #808080}
         </style> 
     </head><body style="margin: 20px; font-size: xx-large">
@@ -16,7 +16,7 @@
         <p>number zero</p>
     </div>
     <div>
-        <div style="border: solid #f0f0f0 5px; margin-bottom: -20vh; margin-top: 20vh"></div>
         <a href="1"><div class="enter"></div></a>
+        <div style="border: solid #f0f0f0 5px; width: 0px; margin-left: 18vh; height: 50vh; margin-top: -5px"></div>
     </div>
     </body>
