--- a/zine/0.html
+++ b/zine/0.html
@@ -13,7 +13,7 @@
     </head><body style="margin: 20px; font-size: xx-large">
     <div>
         <h1>the<br>base-<br>ment</h1>
-        <p>number zero</p>
+        <p>number zero<br>número zero<br>nanpa ala</p>
     </div>
     <div>
         <a href="1"><div class="enter"></div></a>
