--- a/zine/3.html
+++ b/zine/3.html
@@ -30,7 +30,8 @@
             <p style="text-align:justify">I don't know what to put here yet. I guess i'll just put things i feel like putting here.
                 Stories, some poems, maybe drawings... Maybe even in a bunch of languages... stuff in general.
                 Especially since I have a lot of free time now, and hopefully, with this other place,
-                somewhere to put this time to use. Not much else to say. Sorry.
+                somewhere to put this time to use. And I promise the other numbers won't be this colorless.
+                Not much else to say. Sorry.
             </p>
         </div>
     </body>
