--- a/zine/0.html
+++ b/zine/0.html
@@ -12,7 +12,7 @@
         </style> 
     </head><body style="margin: 20px; font-size: xx-large">
     <div>
-        <h1>the<br>base-<br>ment</h1>
+        <h1>name-<br>less</h1>
         <p>number zero<br>número zero<br>nanpa ala</p>
     </div>
     <div>
