--- a/words/jan.html
+++ b/words/jan.html
@@ -32,12 +32,10 @@
         <br>jan li wile pali e ijo mute kepeken sona ona.
         <br>li wile pona e lon ona.
         <br>li wile pona e lon pi jan ante.
-        <br>li wile pona ala e ma.
-        <br>li wile pona ala e lon soweli.
-        <br>li wile pona ala e lon kasi.
-        <br>li wile pona ala e lon waso.
-        <br>jan li wile e pona tawa jan taso.
-        <br>ale li ona.
+        <br>li ken pona e ijo ante.
+        <br>taso ona li ni ala.
+        <br>ni li wile suli ona ala.
+        <br>jan li wile suli ona.
         <br> 
         <br>jan mute li lon.
         <br>tenpo suli la jan li lon.
