--- a/words/jan.html
+++ b/words/jan.html
@@ -62,8 +62,7 @@
         <br>toki Epelanto, toki Losupan, toki ni.
         <br>jan li ken toki kepeken ijo mute.
         <br>uta, luka, ilo sona...
-        <br>linluwi la, jan li ken toki tawa jan ale!
-        <br>...li ken toki ala tawa jan pi linluwi ala.
+        <br>linluwi la, jan li ken toki tawa jan mute mute mute!
         <br>
         <br>jan li jan.
         <br>lon jan li kulupu.
