--- a/zine/5.html
+++ b/zine/5.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>index</title>
+        <title>intro</title>
         <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
         body{display: grid; 
@@ -17,13 +17,11 @@
         .enter:hover{background-color: #808080}
         </style> 
     </head>
-        <body style="font-size:xx-large">
-        <div style="display:flex">
-            <p style="align-self: center; text-align: center; width: 100%">a webzine by cvni81</p>
+        <body>
+        <div style="background-color: #101010;"">
         </div>
-        <div style="padding-left:100px">
-            <h2>index</h2>
-            <p><a href="2">intro</a><br>
-            <a href="4">jan</a></p>
+        <div style="padding: 0px 100px">
+            <p style="text-align:justify">jan jan jan jan jan
+            </p>
         </div>
     </body>
