--- a/zine/5.html
+++ b/zine/5.html
@@ -18,10 +18,22 @@
         </style> 
     </head>
         <body>
-        <div style="background-color: #101010;"">
+        <div style="background-color: #080808; height: 100vh">
         </div>
         <div style="padding: 0px 100px">
-            <p style="text-align:justify">jan jan jan jan jan
-            </p>
+            <h2>jan</h2>
+            <p style="text-align:justify">jan li suli.
+                <br>jan li ken sona e ijo mute.
+                <br>sona mun, sona kasi, sona soweli, sona nasin...
+                <br>taso, ona li ken ala sona e ale...
+                <br>insa lawa ona li lili mute.
+                <br>sona mute mute mute li lon.
+                <br>jan li wile pali e ijo mute kepeken sona ona.
+                <br>li wile pona e lon ona.
+                <br>li wile pona e lon pi jan ante.
+                <br>li ken pona e ijo ante.
+                <br>taso ona li ni ala.
+                <br>ni li wile suli ona ala.
+                <br>jan li wile suli ona. </p>
         </div>
     </body>
