--- a/zine/5.html
+++ b/zine/5.html
@@ -21,8 +21,7 @@
         <div style="background-color: #080808; height: 100vh">
         </div>
         <div style="padding: 0px 100px">
-            <h2>jan</h2>
-            <p style="text-align:justify">jan li suli.
+            <p>jan li suli.
                 <br>jan li ken sona e ijo mute.
                 <br>sona mun, sona kasi, sona soweli, sona nasin...
                 <br>taso, ona li ken ala sona e ale...
