--- a/zine/5.html
+++ b/zine/5.html
@@ -20,8 +20,8 @@
         <body>
         <div style="background-color: #080808; height: 100vh">
         </div>
-        <div style="padding: 0px 100px">
-            <p>jan li suli.
+        <div style="padding: 0px 100px; display: flex">
+            <p style="align-self: center">jan li suli.
                 <br>jan li ken sona e ijo mute.
                 <br>sona mun, sona kasi, sona soweli, sona nasin...
                 <br>taso, ona li ken ala sona e ale...
