--- a/zine/7.html
+++ b/zine/7.html
@@ -19,21 +19,17 @@
     </head>
         <body>
         <div style="background-color: #080808; height: 100vh; display: flex">
-            <img src="jan/jan1.png" style="align-self: center; margin: 0 auto">
+            <img src="jan/jan3.png" style="align-self: center; margin: 0 auto">
         </div>
         <div style="padding: 0px 100px; display: flex">
-            <p style="align-self: center">jan li suli.
-                <br>jan li ken sona e ijo mute.
-                <br>sona mun, sona kasi, sona soweli, sona nasin...
-                <br>taso, ona li ken ala sona e ale...
-                <br>insa lawa ona li lili mute.
-                <br>sona mute mute mute li lon.
-                <br>jan li wile pali e ijo mute kepeken sona ona.
-                <br>li wile pona e lon ona.
-                <br>li wile pona e lon pi jan ante.
-                <br>li ken pona e ijo ante.
-                <br>taso ona li ni ala.
-                <br>ni li wile suli ona ala.
-                <br>jan li wile suli ona. </p>
+            <p style="align-self: center">jan li utala.
+                <br>lili la, jan mama li utala e jan lili ona.
+                <br>suli la, ma li utala e ma ante.
+                <br>tan li wawa.
+                <br>jan li wawa la ona li ken pali e wile ona tawa wile ona.
+                <br>wawa pi jan ni li pona ala.
+                <br>wile pi jan ni li pona ala.
+                <br>wile pi jan ni li wawa.
+                <br>jan ni li monsuta.</p>
         </div>
     </body>
