--- a/zine/4.html
+++ b/zine/4.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>intro</title>
+        <title>jan</title>
         <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
     </head>
         <body>
