--- a/zine/8.html
+++ b/zine/8.html
@@ -19,21 +19,16 @@
     </head>
         <body>
         <div style="background-color: #080808; height: 100vh; display: flex">
-            <img src="jan/jan1.png" style="align-self: center; margin: 0 auto">
+            <img src="jan/jan4.png" style="align-self: center; margin: 0 auto">
         </div>
         <div style="padding: 0px 100px; display: flex">
-            <p style="align-self: center">jan li suli.
-                <br>jan li ken sona e ijo mute.
-                <br>sona mun, sona kasi, sona soweli, sona nasin...
-                <br>taso, ona li ken ala sona e ale...
-                <br>insa lawa ona li lili mute.
-                <br>sona mute mute mute li lon.
-                <br>jan li wile pali e ijo mute kepeken sona ona.
-                <br>li wile pona e lon ona.
-                <br>li wile pona e lon pi jan ante.
-                <br>li ken pona e ijo ante.
-                <br>taso ona li ni ala.
-                <br>ni li wile suli ona ala.
-                <br>jan li wile suli ona. </p>
+            <p style="align-self: center">jan li toki.
+                <br>jan li toki kepeken nasin mute.
+                <br>toki Inli, toki Kanse, toki Nijon, toki mute mute li lon.
+                <br>jan li ken pali e toki ona.
+                <br>toki Epelanto, toki Losupan, toki ni.
+                <br>jan li ken toki kepeken ijo mute.
+                <br>uta, luka, ilo sona...
+                <br>linluwi la, jan li ken toki tawa jan mute mute mute! </p>
         </div>
     </body>
