--- a/zine/9.html
+++ b/zine/9.html
@@ -19,21 +19,22 @@
     </head>
         <body>
         <div style="background-color: #080808; height: 100vh; display: flex">
-            <img src="jan/jan1.png" style="align-self: center; margin: 0 auto">
+            <img src="jan/jan5.png" style="align-self: center; margin: 0 auto">
         </div>
         <div style="padding: 0px 100px; display: flex">
-            <p style="align-self: center">jan li suli.
-                <br>jan li ken sona e ijo mute.
-                <br>sona mun, sona kasi, sona soweli, sona nasin...
-                <br>taso, ona li ken ala sona e ale...
-                <br>insa lawa ona li lili mute.
-                <br>sona mute mute mute li lon.
-                <br>jan li wile pali e ijo mute kepeken sona ona.
-                <br>li wile pona e lon ona.
-                <br>li wile pona e lon pi jan ante.
-                <br>li ken pona e ijo ante.
-                <br>taso ona li ni ala.
-                <br>ni li wile suli ona ala.
-                <br>jan li wile suli ona. </p>
+            <p style="align-self: center">jan li jan.
+                <br>lon jan li kulupu.
+                <br>kulupu la jan li sona mute.
+                <br>kulupu la jan li toki mute.
+                <br>kulupu la jan li wawa mute.
+                <br>kulupu la jan li ken pona mute.
+                <br>kulupu la jan li pali e wile ona.
+                <br>wile ni o pona.
+                <br>wile jan o pona.
+                <br>wile sina o pona.
+                <br>sona la o pona.
+                <br>utala la o pona.
+                <br>toki la o pona.
+                <br>o jan pona.</p>
         </div>
     </body>
