--- a/zine/0.html
+++ b/zine/0.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>another place #0</title>
+        <title>nameless #0</title>
         <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
         body{display: grid; grid-template-columns: min-content min-content;}
