--- a/zine/1.html
+++ b/zine/1.html
@@ -23,7 +23,7 @@
         </div>
         <div style="padding-left:100px">
             <h2>index</h2>
-            <p><a href="2">intro</a><br>
-            <a href="4">jan</a></p>
+            <p><a href="2">2 intro</a><br>
+            <a href="4">4 jan</a></p>
         </div>
     </body>
