--- a/zine/5.html
+++ b/zine/5.html
@@ -19,7 +19,7 @@
     </head>
         <body>
         <div style="background-color: #080808; height: 100vh; display: flex">
-            <a href="6"><img src="jan/jan1.png" style="align-self: center; margin: 0 auto"></a>
+            <a href="6" style="align-self: center; margin: 0 auto"><img src="jan/jan1.png"></a>
         </div>
         <div style="padding: 0px 100px; display: flex">
             <p style="align-self: center">jan li suli.
