--- a/zine/9.html
+++ b/zine/9.html
@@ -19,7 +19,7 @@
     </head>
         <body>
         <div style="background-color: #080808; height: 100vh; display: flex">
-            <img src="jan/jan5.png" style="align-self: center; margin: 0 auto">
+            <a href="1" style="align-self: center; margin: 0 auto"><img src="jan/jan5.png"></a>
         </div>
         <div style="padding: 0px 100px; display: flex">
             <p style="align-self: center">jan li jan.
