--- a/zine/3.html
+++ b/zine/3.html
@@ -31,7 +31,8 @@
                 Stories, some poems, maybe drawings... Maybe even in a bunch of languages... stuff in general.
                 Especially since I have a lot of free time now, and hopefully, with this other place,
                 somewhere to put this time to use. And I promise the other numbers won't be this colorless.
-                Not much else to say. Sorry. <a href="1">Can you take me back, please?</a>
+                Not much else to say. Sorry.
             </p>
+        <div class="enter" style="width: 50px; height: 50px"></div>
         </div>
     </body>
