--- a/zine/3.html
+++ b/zine/3.html
@@ -13,7 +13,7 @@
         transform: translateY(-50%);
         width: 100vw}
         p{margin: 20px 0px; color: #a0a0a0}
-        .enter{width: 35vh; height: 35vh; background-color: #404040; border: solid #f0f0f0 10px; border-radius: 50%}
+        .enter{width: 50px; height: 50px; background-color: #404040; border: solid #f0f0f0 5px; border-radius: 50%}
         .enter:hover{background-color: #808080}
         </style> 
     </head>
@@ -33,6 +33,6 @@
                 somewhere to put this time to use. And I promise the other numbers won't be this colorless.
                 Not much else to say. Sorry.
             </p>
-        <div class="enter" style="width: 50px; height: 50px"></div>
+        <a href="4"><div class="enter"></div></a>
         </div>
     </body>
