--- a/zine/1.html
+++ b/zine/1.html
@@ -23,7 +23,8 @@
         </div>
         <div style="padding-left:100px">
             <h2>index</h2>
-            <p>2 <a href="2">intro</a><br>
-            4 <a href="4">jan</a></p>
+            <p>2  <a href="2">intro</a><br>
+            4  <a href="4">jan</a><br>
+            10 <a href="10">plants</a></p>
         </div>
     </body>
