--- a/zine/11.html
+++ b/zine/11.html
@@ -29,8 +29,7 @@
             <p style="text-align:justify">Your cells need oxygen, brought from the air into your lungs, then blood,
                 so it can enter a series of reactions forming ATP, which is used
                 to synthesize proteins used by your body to... keep existing.
-                And that oxygen will most likely come from plants.
+                And that oxygen will most likely come from plants. <a href="12">But what are they?</a>
             </p>
-        <a href="4"><div class="enter"></div></a>
         </div>
     </body>
