--- a/zine/12.html
+++ b/zine/12.html
@@ -23,12 +23,12 @@
                 Never thought i'd get philosophical about freaking plants, but here we are.
                 What is in common with trees, grass, cacti, lily pads, everything
                 we commonly call "plants"? They're green I guess? That's not very scientific.
+                The one thing that many plants have in common is how they
+                produce the oxygen I was talking about earlier.
             </p>
         </div>
         <div style="padding: 0px 100px">
-            <p style="text-align:justify">The one thing that many plants have in common is how they
-                produce the oxygen I was talking about earlier. They have a nifty
-                way of converting the carbon in CO2 and water into sugar (or more specifically
+            <p style="text-align:justify">Plants have a nifty way of converting the carbon in CO2 and water into sugar (or more specifically
                 glucose), that they can use in the same reaction our body uses to
                 keep ourselves existant. The sugar producing reaction is called
                 "photosynthesis", and happens using a pigment called clorophyll, which can be
