--- a/zine/16.html
+++ b/zine/16.html
@@ -18,16 +18,15 @@
         </style> 
     </head>
         <body>
-            <div style="background-color: #080808; height: 100vh; display: flex">
-                <img src="plants/plants2.png">
-            </div>
         <div style="padding: 0px 100px">
-            <p style="text-align:justify">Sporophytes reproduce asexually via spores, while
-                Gametophytes reproduce sexually with female and male gametes. Now, you may ask,
-                why does that matter? Well my friend, plants are what we call "diplobiontic" and "metagenic",
-                where their life cycle switches between sporo and gametophytes with every generation, with
-                one being more developed than the other!
-                <a href="15">Wait what</a>
+            <p style="text-align:justify">Ok, this is getting a bit long, so i'll try to be short:
+                Let's say we have a mango tree. The tree is a Sporophyte with 2 sets of chromosomes, which produces spores
+                that, through metagenesis and meiosis, turn into Gametophytes that have just one set
+                of chromosomes; they are the female embryo sac and the male... pollen! The "son" of a tree is actually the pollen in
+                the flowers, not another tree!
             </p>
+        </div>
+        <div style="background-color: #080808; height: 100vh; display: flex">
+            <a href="15" style="align-self: center; margin: 0 auto"><img src="plants/plants3.png"></a>
         </div>
     </body>
