--- a/zine/14.html
+++ b/zine/14.html
@@ -17,21 +17,15 @@
         .enter:hover{background-color: #808080}
         </style> 
     </head>
-        <body>
-        <div style="padding: 0px 100px">
-            <p style="text-align:justify">Plants can be of two sorts: <i>Sporophytes</i> or <i>Gametophytes</i>.
-                They are different in many ways: Sporophytes have 2 sets of chromosomes,
-                that is they have 2 copies of the same chromosomes. Gametophytes, however, only have
-                one copy of every chromosome. Another difference is how they reproduce. You can
-                tell by their names!
-            </p>
-        </div>
-        <div style="padding: 0px 100px">
-            <p style="text-align:justify">Sporophytes reproduce asexually via spores, while
-                Gametophytes reproduce sexually with female and male gametes. Now, you may ask,
-                why does that matter? Well my friend, plants are what we call "diplobiontic" and "metagenic",
-                where their life cycle switches between sporo and gametophytes between generations!
-                <a href="15">Wait what</a>
-            </p>
+    <body>
+        <div style="padding: 0px 100px; display: flex">
+        <p style="text-align:justify">Plants can be of two sorts: <i>Sporophytes</i> or <i>Gametophytes</i>.
+            They are different in many ways: Sporophytes have 2 sets of chromosomes,
+            that is they have 2 copies of the same chromosomes, represented by 2n. Gametophytes, however, only have
+            one copy of every chromosome represented by just n. Another difference is how they reproduce. You can
+            tell by their names!
+        </p>
+        <div style="background-color: #080808; height: 100vh; display: flex">
+            <a href="15" style="align-self: center; margin: 0 auto"><img src="plants/plants1.png"></a>
         </div>
     </body>
