--- a/zine/17.html
+++ b/zine/17.html
@@ -19,15 +19,16 @@
     </head>
         <body>
             <div style="background-color: #080808; height: 100vh; display: flex">
-                <img src="plants/plants2.png">
+                <img src="plants/plants4.png">
             </div>
         <div style="padding: 0px 100px">
-            <p style="text-align:justify">Sporophytes reproduce asexually via spores, while
-                Gametophytes reproduce sexually with female and male gametes. Now, you may ask,
-                why does that matter? Well my friend, plants are what we call "diplobiontic" and "metagenic",
-                where their life cycle switches between sporo and gametophytes with every generation, with
-                one being more developed than the other!
-                <a href="15">Wait what</a>
+            <p style="text-align:justify">The gametophytes will then come together to form an 
+                embryo, and it will turn into another sporophyte mango tree with 2 sets of chromosomes! 
+                A mango tree is the parent to the pollen and the <i>grandparent</i> to the new mango tree! Why that is we
+                don't know for certain yet. And i wanted to get into talking about actual plant divisions
+                but this is already getting too long so i'll stop it here now.
+                Hope you enjoyed learning a bit about plants! Bye!
+                <a href="1">Bye!</a>
             </p>
         </div>
     </body>
