--- a/zine/14.html
+++ b/zine/14.html
@@ -5,7 +5,7 @@
         <title>plants</title>
         <link href="anotherstyle.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700&display=swap');
-        body{display: grid; 
+       body{display: grid; 
         grid-template-columns: 50% 50%;
         row-gap: 20px;
         position: absolute;
@@ -18,8 +18,8 @@
         </style> 
     </head>
     <body>
-        <div style="padding: 0px 100px; display: flex">
-        <p style="text-align:justify">Plants can be of two sorts: <i>Sporophytes</i> or <i>Gametophytes</i>.
+        <div style="padding: 0px 100px">
+        <p style="text-align:justify; align-self: center">Plants can be of two sorts: <i>Sporophytes</i> or <i>Gametophytes</i>.
             They are different in many ways: Sporophytes have 2 sets of chromosomes,
             that is they have 2 copies of the same chromosomes, represented by 2n. Gametophytes, however, only have
             one copy of every chromosome represented by just n. Another difference is how they reproduce. You can
