--- a/zine/16.html
+++ b/zine/16.html
@@ -18,7 +18,7 @@
         </style> 
     </head>
         <body>
-        <div style="padding: 0px 100px">
+        <div style="text-align:justify; align-self: center">
             <p style="text-align:justify">Ok, this is getting a bit long, so i'll try to be short:
                 Let's say we have a mango tree. The tree is a Sporophyte with 2 sets of chromosomes, which produces spores
                 that, through metagenesis and meiosis, turn into Gametophytes that have just one set
