--- a/zine/17.html
+++ b/zine/17.html
@@ -22,7 +22,7 @@
                 <img src="plants/plants4.png">
             </div>
         <div style="padding: 0px 100px">
-            <p style="text-align:justify">The gametophytes will then come together to form an 
+            <p style="text-align:justify; align-self: center">The gametophytes will then come together to form an 
                 embryo, and it will turn into another sporophyte mango tree with 2 sets of chromosomes! 
                 A mango tree is the parent to the pollen and the <i>grandparent</i> to the new mango tree! Why that is we
                 don't know for certain yet. And i wanted to get into talking about actual plant divisions
