--- a/zine/15.html
+++ b/zine/15.html
@@ -21,7 +21,7 @@
             <div style="background-color: #080808; height: 100vh; display: flex">
                 <img src="plants/plants2.png">
             </div>
-        <div style="padding: 0px 100px">
+        <div style="padding: 0px 100px; display: flex">
             <p style="text-align:justify; align-self: center">Sporophytes reproduce asexually via spores, while
                 Gametophytes reproduce sexually with female and male gametes. Now, you may ask,
                 why does that matter? Well my friend, plants are what we call "diplobiontic" and "metagenic",
