--- a/zine/17.html
+++ b/zine/17.html
@@ -21,7 +21,7 @@
             <div style="background-color: #080808; height: 100vh; display: flex">
                 <img src="plants/plants4.png">
             </div>
-        <div style="padding: 0px 100px">
+        <div style="padding: 0px 100px; display: flex">
             <p style="text-align:justify; align-self: center">The gametophytes will then come together to form an 
                 embryo, and it will turn into another sporophyte mango tree with 2 sets of chromosomes! 
                 A mango tree is the parent to the pollen and the <i>grandparent</i> to the new mango tree! Why that is we
