--- a/zine/14.html
+++ b/zine/14.html
@@ -18,13 +18,13 @@
         </style> 
     </head>
     <body>
-        <div style="padding: 0px 100px">
+        <div style="padding: 0px 100px; display: flex">
         <p style="text-align:justify; align-self: center">Plants can be of two sorts: <i>Sporophytes</i> or <i>Gametophytes</i>.
             They are different in many ways: Sporophytes have 2 sets of chromosomes,
             that is they have 2 copies of the same chromosomes, represented by 2n. Gametophytes, however, only have
             one copy of every chromosome represented by just n. Another difference is how they reproduce. You can
             tell by their names!
-        </p>
+        </p></div>
         <div style="background-color: #080808; height: 100vh; display: flex">
             <a href="15" style="align-self: center; margin: 0 auto"><img src="plants/plants1.png"></a>
         </div>
