--- a/zine/14.html
+++ b/zine/14.html
@@ -22,10 +22,10 @@
         <p style="text-align:justify; align-self: center">Plants can be of two sorts: <i>Sporophytes</i> or <i>Gametophytes</i>.
             They are different in many ways: Sporophytes have 2 sets of chromosomes,
             that is they have 2 copies of the same chromosomes, represented by 2n. Gametophytes, however, only have
-            one copy of every chromosome represented by just n. Another difference is how they reproduce. You can
-            tell by their names!
+            one copy of every chromosome represented by just n. <a href="15">Ok, what else?</a>
         </p></div>
         <div style="background-color: #080808; height: 100vh; display: flex">
-            <a href="15" style="align-self: center; margin: 0 auto"><img src="plants/plants1.png"></a>
+            <h2>sporophyte</h2><br><p style="color: #808080">2n</p><br>
+            <br><h2>gametophyte</h2><br><p style="color: #808080">n</p>
         </div>
     </body>
