--- a/zine/15.html
+++ b/zine/15.html
@@ -22,7 +22,8 @@
                 <img src="plants/plants2.png">
             </div>
         <div style="padding: 0px 100px; display: flex">
-            <p style="text-align:justify; align-self: center">Sporophytes reproduce asexually via spores, while
+            <p style="text-align:justify; align-self: center"> Another difference is how they reproduce. You can
+                tell by their names! Sporophytes reproduce asexually via spores, while
                 Gametophytes reproduce sexually with female and male gametes. Now, you may ask,
                 why does that matter? Well my friend, plants are what we call "diplobiontic" and "metagenic",
                 where their life cycle switches between sporo and gametophytes with every generation, with
