--- a/zine/14.html
+++ b/zine/14.html
@@ -15,6 +15,7 @@
         p{margin: 20px 0px; color: #a0a0a0}
         .enter{width: 50px; height: 50px; background-color: #404040; border: solid #f0f0f0 5px; border-radius: 50%}
         .enter:hover{background-color: #808080}
+        h1{size:xx-large}
         </style> 
     </head>
     <body>
@@ -25,7 +26,9 @@
             one copy of every chromosome represented by just n. <a href="15">Ok, what else?</a>
         </p></div>
         <div style="background-color: #080808; height: 100vh; display: flex">
+            <div style="align-self:center; text-align:center">
             <h2>sporophyte</h2><br><p style="color: #808080">2n</p><br>
             <br><h2>gametophyte</h2><br><p style="color: #808080">n</p>
+            </div>
         </div>
     </body>
