--- a/zine/14.html
+++ b/zine/14.html
@@ -27,8 +27,8 @@
         </p></div>
         <div style="background-color: #080808; height: 100vh; display: flex">
             <div style="align-self:center; text-align:center">
-            <h2>sporophyte</h2><br><p style="color: #808080">2n</p><br>
-            <br><h2>gametophyte</h2><br><p style="color: #808080">n</p>
+            <h1>sporophyte</h1><p style="color: #808080">2n</p>
+            <br><h1>gametophyte</h1><p style="color: #808080">n</p>
             </div>
         </div>
     </body>
