--- a/zine/14.html
+++ b/zine/14.html
@@ -15,7 +15,7 @@
         p{margin: 20px 0px; color: #a0a0a0}
         .enter{width: 50px; height: 50px; background-color: #404040; border: solid #f0f0f0 5px; border-radius: 50%}
         .enter:hover{background-color: #808080}
-        h1{font-size:xx-large}
+        h1{font-size:xxx-large; margin: 0}
         </style> 
     </head>
     <body>
@@ -27,8 +27,8 @@
         </p></div>
         <div style="background-color: #080808; height: 100vh; display: flex">
             <div style="align-self:center; text-align:center; margin: 0 auto">
-            <h1>sporophyte</h1><p style="color: #808080">2n</p>
-            <br><h1>gametophyte</h1><p style="color: #808080">n</p>
+            <h1>sporophyte</h1><p style="color: #808080; font-weight: bold; margin: 0">2n</p>
+            <br><h1>gametophyte</h1><p style="color: #808080; font-weight: bold; margin: 0">n</p>
             </div>
         </div>
     </body>
