changed doodle styles

--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -34,7 +34,7 @@
         </div></nav>
         <div class="main">
         <img src="/website/doodles/etcheader.gif" alt="etc" style="height:120px; margin-bottom:20px" class="header"><br>
-        <div id="drawings" style="width:650px; margin-top:20px">
+        <div id="drawings">
         <img src="/website/doodles/etc/creatures.jpg" alt="creatures">
         <img src="/website/doodles/etc/cat_doodles.jpg" alt="cat doodles">
         <img src="/website/doodles/etc/cat_spotlight.jpg" alt="cat spotlight">
