--- a/doodles/people.html
+++ b/doodles/people.html
@@ -34,14 +34,13 @@
         </div></nav>
         <div class="main">
         <img src="/website/doodles/peopleheader.gif" alt="people" style="height:120px; margin-bottom:20px" class="header">
-        <div id="drawings" style="width:650px; margin-top:20px">
+        <div id="drawings">
         <img src="/website/doodles/people/tall.jpg" alt="tall">
         <img src="/website/doodles/people/annoyed.jpg" alt="annoyed">
         <img src="/website/doodles/people/guy.jpg" alt="guy">
         <img src="/website/doodles/people/aslep.jpg" alt="aslep">
         <img src="/website/doodles/people/aww.jpg" alt="aww">
         <img src="/website/doodles/people/aww.png" alt="aww2">
-        <img src="/website/doodles/people/faces.jpg" alt="faces">
         <img src="/website/doodles/people/hmm.jpg" alt="hmm">
         <img src="/website/doodles/people/sitting.jpg" alt="sitting">
         <img src="/website/doodles/people/stairs.jpg" alt="stairs">
@@ -50,5 +49,6 @@
         <img src="/website/doodles/people/untitled.png" alt="untitled">
         <img src="/website/doodles/people/float.jpg" alt="float">
         <img src="/website/doodles/people/fear.jpg" alt="fear">
+        <img src="/website/doodles/people/faces.jpg" alt="faces">
         </div>
     </body>
