--- a/doodles/ruler_and_compass.html
+++ b/doodles/ruler_and_compass.html
@@ -35,7 +35,7 @@
         <div class="main">
         <img src="/website/doodles/racheader.gif" alt="ruler and compass" style="height:120px; margin-bottom:20px" class="header"><br>
         <p>This used to be the thing i did the most since, maybe the start of 2021, and i have a big bunch of geometrical things, i PROMISE this won't be this empty forever</p>
-        <div id="drawings" style="width:650px; margin-top:20px">
+        <div id="drawings">
         <img src="/website/doodles/rac/arrow.jpg" alt="arrow">
         <img src="/website/doodles/rac/mun_suno.jpg" alt="mun suno">
         <img src="/website/doodles/rac/3.jpg" alt="3">
