added more doodles

--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -35,6 +35,9 @@
         <div class="main">
         <img src="/website/doodles/etcheader.gif" alt="etc" style="height:120px; margin-bottom:20px" class="header"><br>
         <div id="drawings">
+        <img src="/website/doodles/etc/creatures2.jpg" alt="creatures2">
+        <img src="/website/doodles/etc/noise.jpg" alt="noise">
+        <img src="/website/doodles/etc/light.jpg" alt="light">
         <img src="/website/doodles/etc/creatures.jpg" alt="creatures">
         <img src="/website/doodles/etc/cat_doodles.jpg" alt="cat doodles">
         <img src="/website/doodles/etc/cat_spotlight.jpg" alt="cat spotlight">
