--- a/buttons.html
+++ b/buttons.html
@@ -46,6 +46,7 @@
     <a href="https://nyanseong.neocities.org/" class="button"><img width="88" height="31" src="https://nyanseong.neocities.org/img/buttons/nyanseong-wink.png"></a>
     <a href="https://noodledesk.net/" class="button"><img src="/website/misc/folder/noodlebutton.gif" alt="noodle desk"></a>
     <br>
+    <a href="https://lazybones.neocities.org/" class="button"><img src="https://lazybones.neocities.org/IMAGES/lazybonesicon4.png" alt="lazybones"></a>
     <a href="https://www.bikobatanari.art/" class="button"><img src="https://www.bikobatanari.art/images/bikobatanari.gif" alt="bikobatanari"></a>
     <a href="https://status.cafe" class="button"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"></a>
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/website/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;"></iframe>
