added unnamed zine

--- a/misc/folder.html
+++ b/misc/folder.html
@@ -51,6 +51,14 @@
     </details>
 
     <details>
+        <summary><a>unnamed zine</a></summary>
+        Refer to <a href="journal#zine">journal entry</a>.
+        <ul>
+            <li><a href="/folder/zine/0">zine</a></li>
+        </ul>
+    </details>
+
+    <details>
         <summary><a>miscellaneous pages</a></summary>
         <ul>
             <li><a href="/website/misc/folder/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit.</li>
