--- a/misc/folder.html
+++ b/misc/folder.html
@@ -20,7 +20,7 @@
     <details>
         <summary><a>index</a></summary>
         <ul>
-            <li><a href="/website/misc/folder/index">index</a>: an earlier version of the start page with a sidebar and descriptions for pages.</li>
+            <li><a href="folder/index">index</a>: an earlier version of the start page with a sidebar and descriptions for pages.</li>
         </ul>
         <details>
             <summary><a>earlier version of intro text</a>: I wanted to change this to be more about the site (or as best as i could), 
@@ -38,15 +38,15 @@
         When i originally made the handdrawn/doodles page, as the name suggested, everything was supposed to be handdrawn, even the text. But after trying to chroma key the text+drawings out (because i didn't want an ugly border in the images), 
         once with black on white and then with black on green to see if it helped (it didn't, i suck at chroma key), i just gave up and had to settle for the separated text and drawing.
         <ul>
-            <li><a href="/website/misc/folder/original1.jpg">try #1</a></li>
-            <li><a href="/website/misc/folder/original2.jpg">try #2</a></li>
-            <li>original <a href="/website/misc/folder/handdrawn">{handdrawn}</a> page</li>
+            <li><a href="folder/original1.jpg">try #1</a></li>
+            <li><a href="folder/original2.jpg">try #2</a></li>
+            <li>original <a href="folder/handdrawn">{handdrawn}</a> page</li>
         </ul>
         since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly. 
         <ul>
-            <li><a href="/website/misc/folder/people_button.jpg">people</a></li>
-            <li><a href="/website/misc/folder/ruler_and_compass_button.jpg">ruler and compass</a></li>
-            <li><a href="/website/misc/folder/etc_button.jpg">etc (the culprit)</a></li>
+            <li><a href="folder/people_button.jpg">people</a></li>
+            <li><a href="folder/ruler_and_compass_button.jpg">ruler and compass</a></li>
+            <li><a href="folder/etc_button.jpg">etc (the culprit)</a></li>
         </ul>
     </details>
 
@@ -54,24 +54,24 @@
         <summary><a>unnamed zine</a></summary>
         Refer to <a href="journal#zine">journal entry</a>.
         <ul>
-            <li><a href="/folder/zine/0">zine</a></li>
+            <li><a href="folder/zine/0">zine</a></li>
         </ul>
     </details>
 
     <details>
         <summary><a>miscellaneous pages</a></summary>
         <ul>
-            <li><a href="/website/misc/folder/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit.</li>
-            <li><a href="/website/misc/folder/hi">hi</a>: hi</li>
-            <li><a href="/website/misc/folder/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
+            <li><a href="folder/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit.</li>
+            <li><a href="folder/hi">hi</a>: hi</li>
+            <li><a href="folder/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
         </ul>
     </details>
 
     <details>
         <summary><a>miscellaneous images</a></summary>
         <ul>
-            <li><a href="/website/misc/folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
-            <li><a href="/website/misc/folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.</li>
+            <li><a href="folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
+            <li><a href="folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.</li>
         </ul>
     </details>
 
