--- a/misc/journal.html
+++ b/misc/journal.html
@@ -31,10 +31,10 @@
             But it hit me unsurprisingly quickly that<br>i don't really have any good ideas for things to put there.<br>
             And i wanted to reuse a thing that already was in the words section, yknow the jan poem. yeah<br>
             It even had some pictures, i'm...<br>I'm kinda proud of it.<br>
-            It also had a thing about botany? But i... It's not good. It's just<br>
+            It also had a thing about botany? But i... It's not good. It's just-<br>
             I know, i know, i have to work on the site more...<br>
             Look, it's...<br>I just don't know what to do with that thing!<br>
-            Here you go. It's not got the biology part because...<br>
+            <a href="folder/zine/0">Here you go</a>. It's not got the biology part because...<br>
             I'm not particularly proud of that one...<br>Yeah you know.
             It's in the folder too if you wanna take a look there.<br>
             And i might do something with that jan poem. I don't know.<br>
