--- a/misc/folder.html
+++ b/misc/folder.html
@@ -51,10 +51,10 @@
     </details>
 
     <details>
-        <summary><a>unnamed zine</a></summary>
+        <summary><a>nameless zine</a></summary>
         Refer to <a href="journal#zine">journal entry</a>.
         <ul>
-            <li><a href="folder/zine/0">zine</a></li>
+            <li><a href="folder/zine/0">number 0</a></li>
         </ul>
     </details>
 
